Prepare for deeplinks

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,7 @@ voyager = "1.0.0"
 detekt = "1.23.6"
 napier = "2.7.1"
 browser = "1.8.0"
+rinku = "0.5.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -50,6 +51,8 @@ koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-com
 koin-compose-vm = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin-compose-vm" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 browser = { module = "androidx.browser:browser", version.ref = "browser"}
+rinku = { module = "dev.theolm:rinku", version.ref = "rinku"}
+rinku-compose = { module = "dev.theolm:rinku-compose-ext", version.ref = "rinku"}
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
