Ignore project.properties

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ captures
 .externalNativeBuild
 .cxx
 .kotlin
+project.properties
 *.xcodeproj/*
 !*.xcodeproj/project.pbxproj
 !*.xcodeproj/xcshareddata/
