--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,16 +13,15 @@ compose-android = "1.6.8"
 junit = "4.13.2"
 ktor = "2.3.12"
 kotlin = "2.0.0"
-koin = "3.5.6"
-koin-compose-mp = "1.1.5"
-koin-compose-vm = "1.2.0-Beta4"
+koin = "3.6.0-Beta4"
+koin-compose= "1.2.0-Beta4"
 coroutines = "1.8.1"
 kamel = "0.9.5"
-voyager = "1.0.0"
+voyager = "1.1.0-beta02"
 detekt = "1.23.6"
 napier = "2.7.1"
 browser = "1.8.0"
-rinku = "0.5.0"
+rinku = "0.5.1"
 ksecurestorage = "0.0.3"
 
 [libraries]
@@ -48,8 +47,7 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 kamel-image = { module = "media.kamel:kamel-image", version.ref = "kamel" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose-mp" }
-koin-compose-vm = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin-compose-vm" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 browser = { module = "androidx.browser:browser", version.ref = "browser" }
 rinku = { module = "dev.theolm:rinku", version.ref = "rinku" }
