--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -63,7 +63,8 @@ detekt = "1.23.6"
 napier = "2.7.1"
 browser = "1.8.0"
 rinku = "0.5.1"
-ksecurestorage = "0.0.3"
+oidc = "0.10.0"
+lifecycle = "2.8.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -72,7 +73,10 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-android" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-android" }
+lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
+koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel", version.ref = "koin-compose" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-loggin = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
@@ -88,12 +92,18 @@ ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negoti
 kamel-image = { module = "media.kamel:kamel-image", version.ref = "kamel" }
 voyager-navigator = { module = "cafe.adriel.voyager:voyager-navigator", version.ref = "voyager" }
 voyager-koin = { module = "cafe.adriel.voyager:voyager-koin", version.ref = "voyager" }
-koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
+voyager-lifecycle = { module = "cafe.adriel.voyager:voyager-lifecycle-kmp", version.ref = "voyager" }
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
-browser = { module = "androidx.browser:browser", version.ref = "browser" }
 rinku = { module = "dev.theolm:rinku", version.ref = "rinku" }
 rinku-compose = { module = "dev.theolm:rinku-compose-ext", version.ref = "rinku" }
-ksecurestorage = { module = "io.github.alexandereggers:ksecurestorage", version.ref = "ksecurestorage" }
+oidc-appsupport = { module = "io.github.kalinjul.kotlin.multiplatform:oidc-appsupport", version.ref  = "oidc" }
+
+[bundles]
+koin = [
+    "koin-core",
+    "koin-compose",
+    "koin-compose-viewmodel"
+]
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
@@ -103,3 +113,4 @@ jetbrainsCompose = { id = "org.jetbrains.compose", version.ref = "compose" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+
