--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.2.2"
+agp = "8.3.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -8,25 +8,19 @@ androidx-appcompat = "1.6.1"
 androidx-core-ktx = "1.13.1"
 androidx-espresso-core = "3.5.1"
 androidx-test-junit = "1.1.5"
-compose = "1.6.11"
+compose = "1.7.0-dev1731"
 compose-android = "1.6.8"
 junit = "4.13.2"
 ktor = "2.3.12"
 kotlin = "2.0.0"
-koin = "3.6.0-Beta4"
-koin-compose= "1.2.0-Beta4"
+koin = "3.6.0-Beta5"
+koin-compose = "1.2.0-Beta5"
 logger = "1.5.6"
-kotlin = "1.9.24"
-ktor = "2.3.8"
-koin = "3.2.0"
-koin-compose-mp = "1.1.3"
-coroutines = "1.7.3"
-logger = "1.5.3"
+coroutines = "1.8.1"
 kamel = "0.9.5"
 voyager = "1.1.0-beta02"
 detekt = "1.23.6"
 napier = "2.7.1"
-browser = "1.8.0"
 rinku = "0.5.1"
 oidc = "0.10.0"
 lifecycle = "2.8.0"
@@ -61,7 +55,7 @@ voyager-lifecycle = { module = "cafe.adriel.voyager:voyager-lifecycle-kmp", vers
 napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 rinku = { module = "dev.theolm:rinku", version.ref = "rinku" }
 rinku-compose = { module = "dev.theolm:rinku-compose-ext", version.ref = "rinku" }
-oidc-appsupport = { module = "io.github.kalinjul.kotlin.multiplatform:oidc-appsupport", version.ref  = "oidc" }
+oidc-appsupport = { module = "io.github.kalinjul.kotlin.multiplatform:oidc-appsupport", version.ref = "oidc" }
 
 [bundles]
 koin = [
