--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.3.2"
+agp = "8.5.2"
 android-compileSdk = "34"
 android-minSdk = "24"
 android-targetSdk = "34"
@@ -13,8 +13,8 @@ compose-android = "1.6.8"
 junit = "4.13.2"
 ktor = "2.3.12"
 kotlin = "2.0.20"
-koin = "3.6.0-Beta5"
-koin-compose = "1.2.0-Beta5"
+koin = "4.0.0-RC1"
+koin-compose = "4.0.0-RC1"
 logger = "1.5.6"
 coroutines = "1.8.1"
 kamel = "0.9.5"
