--- a/.gitignore
+++ b/.gitignore
@@ -18,4 +18,6 @@ captures
 !*.xcworkspace/contents.xcworkspacedata
 **/xcshareddata/WorkspaceSettings.xcsettings
 composeApp/src/google-services.json
+iosApp/Configuration/GoogleService-Info.plist
 Package.resolved
+iosApp/iosApp/Info.plist
