--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,17 +10,18 @@ ktor = "3.0.3"
 kotlin = "2.1.0"
 koin = "4.0.0"
 koin-compose = "4.0.0"
-logger = "1.5.6"
 coroutines = "1.10.1"
 kamel = "1.0.2"
 detekt = "1.23.7"
-napier = "2.7.1"
 oidc = "0.12.1"
 lifecycle = "2.8.4"
 firebaseBom = "33.2.0"
 firebase = "2.1.0"
 googleServices = "4.4.2"
 kmpauth = "2.3.0-beta01"
+navigator = "2.8.0-alpha10"
+passage = "1.1.0"
+kremit = "2.0.5"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -41,7 +42,6 @@ kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutine
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 kamel-image = { module = "media.kamel:kamel-image", version.ref = "kamel" }
-napier = { module = "io.github.aakira:napier", version.ref = "napier" }
 oidc-appsupport = { module = "io.github.kalinjul.kotlin.multiplatform:oidc-appsupport", version.ref = "oidc" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestone = { module = "dev.gitlive:firebase-firestore", version.ref = "firebase" }
@@ -50,6 +50,9 @@ firebase-common = { module = "dev.gitlive:firebase-common", version.ref = "fireb
 kmp-auth = { module = "io.github.mirzemehdi:kmpauth-google", version.ref = "kmpauth" }
 kmp-firebase = { module = "io.github.mirzemehdi:kmpauth-firebase", version.ref = "kmpauth" }
 kmp-uihelper = { module = "io.github.mirzemehdi:kmpauth-uihelper", version.ref = "kmpauth" }
+jetbrains-navigator = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigator" }
+passage = { group = "io.github.tweener", name = "passage", version.ref = "passage" }
+touchlab-kremit = { module = "co.touchlab:kermit", version.ref = "kremit" }
 
 [bundles]
 koin = [
@@ -62,7 +65,6 @@ firebase = [
     "firebase-common",
     "firebase-auth"
 ]
-
 kmp = [
     "kmp-auth",
     "kmp-firebase",
