--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.5.2"
+agp = "8.6.1"
 android-compileSdk = "35"
 android-minSdk = "26"
 android-targetSdk = "35"
@@ -7,7 +7,7 @@ androidx-activityCompose = "1.9.3"
 compose = "1.7.3"
 junit = "4.13.2"
 ktor = "3.0.3"
-kotlin = "2.1.0"
+kotlin = "2.1.20-Beta1"
 koin = "4.0.0"
 koin-compose = "4.0.0"
 coroutines = "1.10.1"
@@ -22,6 +22,7 @@ kmpauth = "2.3.0-beta01"
 navigator = "2.8.0-alpha10"
 passage = "1.1.0"
 kremit = "2.0.5"
+kotlin-result = "2.0.1"
 
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activityCompose" }
@@ -33,12 +34,9 @@ koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
 ktor-client-core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
 ktor-client-loggin = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
 ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-ktor-client-cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
 ktor-client-mock = { module = "io.ktor:ktor-client-mock", version.ref = "ktor" }
 ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "coroutines" }
-kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 kamel-image = { module = "media.kamel:kamel-image", version.ref = "kamel" }
@@ -47,12 +45,10 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 firebase-firestone = { module = "dev.gitlive:firebase-firestore", version.ref = "firebase" }
 firebase-auth = { module = "dev.gitlive:firebase-auth", version.ref = "firebase" }
 firebase-common = { module = "dev.gitlive:firebase-common", version.ref = "firebase" }
-kmp-auth = { module = "io.github.mirzemehdi:kmpauth-google", version.ref = "kmpauth" }
-kmp-firebase = { module = "io.github.mirzemehdi:kmpauth-firebase", version.ref = "kmpauth" }
-kmp-uihelper = { module = "io.github.mirzemehdi:kmpauth-uihelper", version.ref = "kmpauth" }
 jetbrains-navigator = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigator" }
 passage = { group = "io.github.tweener", name = "passage", version.ref = "passage" }
 touchlab-kremit = { module = "co.touchlab:kermit", version.ref = "kremit" }
+kotlin-result = { module = "com.michael-bull.kotlin-result:kotlin-result", version.ref = "kotlin-result" }
 
 [bundles]
 koin = [
@@ -64,11 +60,6 @@ firebase = [
     "firebase-firestone",
     "firebase-common",
     "firebase-auth"
-]
-kmp = [
-    "kmp-auth",
-    "kmp-firebase",
-    "kmp-uihelper"
 ]
 
 [plugins]
