--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
 kotlin.code.style=official
-
 #Gradle
 org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8 -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-
-
 #Android
 android.nonTransitiveRClass=true
 android.useAndroidX=true
-
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
-
 #Development
 development=true
+kotlin.native.cacheKind.iosX64=none
+kotlin.native.cacheKind.iosSimulatorArm64=none
