--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,14 +11,13 @@ kotlin = "2.1.20-Beta1"
 koin = "4.0.0"
 koin-compose = "4.0.0"
 coroutines = "1.10.1"
-kamel = "1.0.2"
+coil = "3.0.4"
 detekt = "1.23.7"
 oidc = "0.12.1"
 lifecycle = "2.8.4"
 firebaseBom = "33.2.0"
 firebase = "2.1.0"
 googleServices = "4.4.2"
-kmpauth = "2.3.0-beta01"
 navigator = "2.8.0-alpha10"
 passage = "1.1.0"
 kremit = "2.0.5"
@@ -39,7 +38,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
-kamel-image = { module = "media.kamel:kamel-image", version.ref = "kamel" }
+coil = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 oidc-appsupport = { module = "io.github.kalinjul.kotlin.multiplatform:oidc-appsupport", version.ref = "oidc" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebase-firestone = { module = "dev.gitlive:firebase-firestore", version.ref = "firebase" }
